--- a/packages/atoms/x11-misc/app-editors/gvim/definition.yaml
+++ b/packages/atoms/x11-misc/app-editors/gvim/definition.yaml
@@ -1,5 +1,5 @@
 name: gvim
-version: 9.0.2026
+version: 9.0.2136
 category: app-editors
 use_flags:
 - -aqua
@@ -78,7 +78,7 @@ labels:
     dev-lang/luajit:= ) lua_single_target_lua5-1? ( dev-lang/lua:5.1 ) lua_single_target_lua5-2?
     ( dev-lua/lua:5.2 ) lua_single_target_lua5-3? ( dev-lua/lua:5.3 ) lua_single_target_lua5-4?
     ( dev-lua/lua:5.4 ) ) nls? ( sys-devel/gettext )
-  DEPEND: ~app-editors/vim-core-9.0.2026 >=app-eselect/eselect-vi-1.1 >=sys-libs/ncurses-5.2-r2:0=
+  DEPEND: ~app-editors/vim-core-9.0.2136 >=app-eselect/eselect-vi-1.1 >=sys-libs/ncurses-5.2-r2:0=
     x11-libs/libICE x11-libs/libSM x11-libs/libXext x11-libs/libXt acl? ( kernel_linux?
     ( sys-apps/acl ) ) !aqua? ( motif? ( >=x11-libs/motif-2.3:0 ) !motif? ( x11-libs/gtk+:3
     x11-libs/libXft ) ) crypt? ( dev-libs/libsodium:= ) cscope? ( dev-util/cscope
@@ -86,23 +86,23 @@ labels:
     ( dev-lang/lua:5.1 ) lua_single_target_lua5-2? ( dev-lua/lua:5.2 ) lua_single_target_lua5-3?
     ( dev-lua/lua:5.3 ) lua_single_target_lua5-4? ( dev-lua/lua:5.4 ) lua_single_target_lua5-1?
     ( dev-lang/lua:5.1[deprecated] ) ) nls? ( virtual/libintl ) perl? ( dev-lang/perl:=
-    ) python? ( python_single_target_python3_7? ( dev-lang/python:3.7[threads(+)]
-    >=dev-lang/python-exec-2:=[python_targets_python3_7] ) python_single_target_python3_9?
-    ( dev-lang/python:3.9[threads(+)] >=dev-lang/python-exec-2:=[python_targets_python3_9]
+    ) python? ( python_single_target_python3_10? ( dev-lang/python:3.10[threads(+)]
+    >=dev-lang/python-exec-2:=[python_targets_python3_10] ) python_single_target_python3_7?
+    ( dev-lang/python:3.7[threads(+)] >=dev-lang/python-exec-2:=[python_targets_python3_7]
+    ) python_single_target_python3_9? ( dev-lang/python:3.9[threads(+)] >=dev-lang/python-exec-2:=[python_targets_python3_9]
     ) python_single_target_python3_8? ( dev-lang/python:3.8[threads(+)] >=dev-lang/python-exec-2:=[python_targets_python3_8]
     ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[threads(+)]
-    >=dev-lang/python-exec-2:=[python_targets_python2_7] ) python_single_target_python3_10?
-    ( dev-lang/python:3.10[threads(+)] >=dev-lang/python-exec-2:=[python_targets_python3_10]
-    ) ) racket? ( dev-scheme/racket ) ruby? ( || ( dev-lang/ruby:3.0 ) virtual/rubygems
-    ) selinux? ( sys-libs/libselinux ) session? ( x11-libs/libSM ) sound? ( media-libs/libcanberra
-    ) tcl? ( dev-lang/tcl:0= )
+    >=dev-lang/python-exec-2:=[python_targets_python2_7] ) ) racket? ( dev-scheme/racket
+    ) ruby? ( || ( dev-lang/ruby:3.0 ) virtual/rubygems ) selinux? ( sys-libs/libselinux
+    ) session? ( x11-libs/libSM ) sound? ( media-libs/libcanberra ) tcl? ( dev-lang/tcl:0=
+    )
   IUSE: acl aqua crypt cscope debug lua minimal motif netbeans nls perl python racket
     ruby selinux session sound tcl lua_single_target_luajit lua_single_target_lua5-1
-    lua_single_target_lua5-2 lua_single_target_lua5-3 lua_single_target_lua5-4 python_single_target_python3_7
-    python_single_target_python3_9 python_single_target_python3_8 python_single_target_python2_7
-    python_single_target_python3_10 python_targets_python3_7 python_targets_python3_9
-    python_targets_python3_8 python_targets_python2_7 python_targets_python3_10
-  RDEPEND: ~app-editors/vim-core-9.0.2026 >=app-eselect/eselect-vi-1.1 >=sys-libs/ncurses-5.2-r2:0=
+    lua_single_target_lua5-2 lua_single_target_lua5-3 lua_single_target_lua5-4 python_single_target_python3_10
+    python_single_target_python3_7 python_single_target_python3_9 python_single_target_python3_8
+    python_single_target_python2_7 python_targets_python3_10 python_targets_python3_7
+    python_targets_python3_9 python_targets_python3_8 python_targets_python2_7
+  RDEPEND: ~app-editors/vim-core-9.0.2136 >=app-eselect/eselect-vi-1.1 >=sys-libs/ncurses-5.2-r2:0=
     x11-libs/libICE x11-libs/libSM x11-libs/libXext x11-libs/libXt acl? ( kernel_linux?
     ( sys-apps/acl ) ) !aqua? ( motif? ( >=x11-libs/motif-2.3:0 ) !motif? ( x11-libs/gtk+:3
     x11-libs/libXft ) ) crypt? ( dev-libs/libsodium:= ) cscope? ( dev-util/cscope
@@ -110,18 +110,18 @@ labels:
     ( dev-lang/lua:5.1 ) lua_single_target_lua5-2? ( dev-lua/lua:5.2 ) lua_single_target_lua5-3?
     ( dev-lua/lua:5.3 ) lua_single_target_lua5-4? ( dev-lua/lua:5.4 ) lua_single_target_lua5-1?
     ( dev-lang/lua:5.1[deprecated] ) ) nls? ( virtual/libintl ) perl? ( dev-lang/perl:=
-    ) python? ( python_single_target_python3_7? ( dev-lang/python:3.7[threads(+)]
-    >=dev-lang/python-exec-2:=[python_targets_python3_7] ) python_single_target_python3_9?
-    ( dev-lang/python:3.9[threads(+)] >=dev-lang/python-exec-2:=[python_targets_python3_9]
+    ) python? ( python_single_target_python3_10? ( dev-lang/python:3.10[threads(+)]
+    >=dev-lang/python-exec-2:=[python_targets_python3_10] ) python_single_target_python3_7?
+    ( dev-lang/python:3.7[threads(+)] >=dev-lang/python-exec-2:=[python_targets_python3_7]
+    ) python_single_target_python3_9? ( dev-lang/python:3.9[threads(+)] >=dev-lang/python-exec-2:=[python_targets_python3_9]
     ) python_single_target_python3_8? ( dev-lang/python:3.8[threads(+)] >=dev-lang/python-exec-2:=[python_targets_python3_8]
     ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[threads(+)]
-    >=dev-lang/python-exec-2:=[python_targets_python2_7] ) python_single_target_python3_10?
-    ( dev-lang/python:3.10[threads(+)] >=dev-lang/python-exec-2:=[python_targets_python3_10]
-    ) ) racket? ( dev-scheme/racket ) ruby? ( || ( dev-lang/ruby:3.0 ) virtual/rubygems
-    ) selinux? ( sys-libs/libselinux ) session? ( x11-libs/libSM ) sound? ( media-libs/libcanberra
-    ) tcl? ( dev-lang/tcl:0= )
+    >=dev-lang/python-exec-2:=[python_targets_python2_7] ) ) racket? ( dev-scheme/racket
+    ) ruby? ( || ( dev-lang/ruby:3.0 ) virtual/rubygems ) selinux? ( sys-libs/libselinux
+    ) session? ( x11-libs/libSM ) sound? ( media-libs/libcanberra ) tcl? ( dev-lang/tcl:0=
+    )
   emerge.packages: app-editors/gvim
   kit: editors-kit
   original.package.name: app-editors/gvim
   original.package.slot: "0"
-  original.package.version: 9.0.2026
+  original.package.version: 9.0.2136
